Crash when scale one vertex with snap. #29611

Closed
opened 2011-12-13 12:16:15 +01:00 by Andrey Penyaz · 5 comments

%%%Create cube for example
select one vertex
enable snap mode.
switch snap mode to face (make sure that "Project individual elements..." is turned OFF.)
press S
move cursor to face and it will crash.

I know that it's no sence to scale one vertex, but in my situation that was not so obvious. I worked with mirror modifier with aplying to editing cage. And so one selected vertex looks like two. I just wanted to scale them to the center, and snapping was turned on :).
I have tried this with 2.6.1.rc1 and also with svn42580.

Win 7 x64.
ATI Mobility Radeon HD 3400 Series (Microsoft Corporation WDDM 1.1) %%%

%%%Create cube for example select one vertex enable snap mode. switch snap mode to face (make sure that "Project individual elements..." is turned OFF.) press S move cursor to face and it will crash. I know that it's no sence to scale one vertex, but in my situation that was not so obvious. I worked with mirror modifier with aplying to editing cage. And so one selected vertex looks like two. I just wanted to scale them to the center, and snapping was turned on :). I have tried this with 2.6.1.rc1 and also with svn42580. Win 7 x64. ATI Mobility Radeon HD 3400 Series (Microsoft Corporation WDDM 1.1) %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Confirmed issue on Mac. It doesn't crash here, but vertex location becomes (inf, inf, inf).%%%

%%%Confirmed issue on Mac. It doesn't crash here, but vertex location becomes (inf, inf, inf).%%%
Author

%%%Windows crash report (translated)
Problem signature:

 Problem Event Name: APPCRASH
 Application Name: blender.exe
 Application Version: 2.6.0.0
 Application Timestamp: 4ee08708
 The name of the module with the error: OPENGL32.dll
 Version of the module with the error: 6.1.7600.16385
 Module Timestamp error: 4a5be02b
 Exception Code: c0000005
 Exception Offset: 0000000000054cff
 OS Version: 6.1.7600.2.0.0.256.1
 Language Code: 1049
 Additional Information 1: 8dbd
 Additional Information 2: 8dbd6e4626781a97c7df579206ed1358
 Additional Information 3: 2cea
 Additional Information 4: 2ceae14b8ed6807cc448f8d4f60dad4a%%%
%%%Windows crash report (translated) Problem signature: ``` Problem Event Name: APPCRASH Application Name: blender.exe Application Version: 2.6.0.0 Application Timestamp: 4ee08708 The name of the module with the error: OPENGL32.dll Version of the module with the error: 6.1.7600.16385 Module Timestamp error: 4a5be02b Exception Code: c0000005 Exception Offset: 0000000000054cff OS Version: 6.1.7600.2.0.0.256.1 Language Code: 1049 Additional Information 1: 8dbd Additional Information 2: 8dbd6e4626781a97c7df579206ed1358 Additional Information 3: 2cea Additional Information 4: 2ceae14b8ed6807cc448f8d4f60dad4a%%%
Member

%%%Fixed in revision 42879%%%

%%%Fixed in revision 42879%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29611
No description provided.