[#29611] Crash when scale one vertex with snap. Reported by Andrey Penyaz Scale snap defaults to 1 when snapping is impossible (distance to center of transformation is zero).